--- a/css/style.css
+++ b/css/style.css
@@ -1017,6 +1017,18 @@ color: black;
     color: purple;
   }
 
+  .card_body{
+    padding: 32px 0px;
+  }
+
+  input{
+    width: 190px;
+  }
+
+  .container_form{
+    width: 94%;
+  }
+
   .btn_arrow_down{
     display: none;
   }
@@ -1066,6 +1078,14 @@ color: black;
 @media only screen and (max-width : 992px){
   .hero_info{
     color: brown;
+  }
+
+  #modal{
+    width: 70%;
+  }
+
+  .container_form{
+    width: 84%;
   }
 
 .btn_arrow_down{
@@ -1134,8 +1154,38 @@ color: black;
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 480px){
+#modal{
+  padding: 0px;
+  width: 100%;
+}
+
+.select-style select{
+  font-size: 14px;
+}
+
+.input_fullwidth{
+  width: 280px;
+}
+
+input{
+  padding:14px;
+  width: 115px;
+}
+
+.card_body{
+  padding: 16px 0px;
+}
+
+.container_form{
+  width: 94%;
+}
+
   .hero_info{
     color: green;
+  }
+
+  .btn_pay{
+    font-size: 16px;
   }
 
   .hero_info_date_text{
@@ -1286,6 +1336,20 @@ color: black;
 @media only screen and (max-width : 320px){
   .hero_info{
     color: pink;
+  }
+
+  input{
+    font-size: 14px;
+    padding: 12px;
+width: 105px;
+  }
+
+  .btn_pay{
+    width: 200px;
+  }
+
+  .input_fullwidth{
+    width: 250px;
   }
 
   .logo_sponsor{
