--- a/css/style.css
+++ b/css/style.css
@@ -1338,9 +1338,12 @@ input{
 
   .ticket_class{
     font-size: 14px;
-    padding:4px 8px;
+    padding: 8px 16px;
     border-radius: 4px;
     margin: 8px 8px 8px 0px;
+    min-width: 90px;
+    text-align: center;
+    min-height: 40px;
   }
 
   .btn_ticket{
