--- a/css/style.css
+++ b/css/style.css
@@ -308,7 +308,7 @@ input{
 .logo_30bg{
   width: 50px;
   margin: 32px;
-  max-height: 50px;
+  height: 50px;
 }
 
 body{
@@ -1203,6 +1203,7 @@ color: black;
 
 .logo_30bg{
   width: 40px;
+  height: 40px;
 }
 
 .logo_davido{
@@ -1296,9 +1297,9 @@ input{
     margin-top: 48px;
   }
   .logo_30bg{
-    width: 25px;
+    width: 30px;
     margin: 16px;
-    max-height: 50px;
+    height: 30px;
   }
 
   .logo_davido{
